@@ -1,3 +1,8 @@
+2022-05-10 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
+
+	* src/SDCCglue.c:
+	  Fix bug #3031.
+
 2022-05-02 Benedikt Freisen <b.freisen AT gmx.net>
 
 	* doc/sdccman.lyx:
